--- a/src/App.css
+++ b/src/App.css
@@ -433,7 +433,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('../images/computer.jpg');
+    background-image: linear-gradient(180deg, #0000008c 0%, #0000008c 100%), url('https://res.cloudinary.com/dbb56iwkk/image/upload/v1701712218/surtido-plano-deliciosa-comida-brasilena_23-2148739179_p6n3sz.jpg');
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 80%, 50% 95%, 0 80%);
     z-index: -1;
